link habit and habitLog